--- a/front-end/src/components/style/Navbar.css
+++ b/front-end/src/components/style/Navbar.css
@@ -37,6 +37,8 @@ nav ul li > *{
   display: flex;
   justify-content: center;
   align-items: center;
+  text-decoration: none;
+  color: #222;
 }
 .logout{
   height: 2.3rem;
