--- a/front-end/src/pages/style/Batches.css
+++ b/front-end/src/pages/style/Batches.css
@@ -3,3 +3,68 @@
   width: 100%;
   background-color: #fff;
 }
+#batches{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  gap: 1rem;
+}
+#batches li{
+  list-style: none;
+  height: 25vh;
+  width: 20vw;
+}
+#batches li button{
+  height: 100%;
+  width: 100%;
+  font-size: 2rem;
+  border-radius: 1rem;
+  border: 2px dashed #9e9e9e55;
+  outline: none;
+  background-color: #9e9e9e22;
+  cursor: pointer;
+  transition: .4s all ease-in-out;
+  backdrop-filter: blur(1rem);
+  color: #d8d8d8;
+}
+#batches li button:hover{
+  color: #222;
+  box-shadow: 0 0 1rem #9e9e9e55;
+  transition: .1s all ease-in-out;
+}
+.dialog-overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(.5rem);
+  background-color: #00000055;
+}
+.dialog-box{
+  height: 30vh;
+  width: 40vw;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: 8px;
+}
+.dialog-box button{
+  width: 20%;
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  height: 2.5rem;
+  background-color: red;
+  color: #fff;
+}
