--- a/front-end/src/pages/style/Home.css
+++ b/front-end/src/pages/style/Home.css
@@ -16,6 +16,6 @@
   width: 50vw;
   border-radius: 1rem;
   background-color: #fff;
-  overflow: scroll;
+  overflow: auto;
   box-shadow: 0 0 1rem #9e9e9e55;
 }
