--- a/front-end/src/pages/auth/style/Login.css
+++ b/front-end/src/pages/auth/style/Login.css
@@ -7,7 +7,8 @@
 }
 .login-container{
   height: 50vh;
-  width: 50vw;
+  max-width: 50vw;
+  min-width: fit-content;
   border: 1px solid #9e9e9e55;
   border-radius: .5rem;
   display: flex;
@@ -24,11 +25,13 @@
   height: 80%;
 }
 .login-form{
+  width: 35vw;
   flex: 1;
   display: grid;
   place-content: center;
 }
 .login-form form{
+  padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
