--- a/front-end/src/pages/auth/style/Register.css
+++ b/front-end/src/pages/auth/style/Register.css
@@ -9,6 +9,7 @@
   padding: 2rem 0;
   min-height: 50vh;
   max-height: fit-content;
+  min-width: fit-content;
   transition: .5s height ease-in-out;
   width: 50vw;
   border: 1px solid #9e9e9e55;
@@ -32,6 +33,7 @@
   place-content: center;
 }
 .register-form form{
+  padding: 0 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -70,6 +72,7 @@
 }
 .student-role{
   height: 5rem;
+  min-width: 20rem;
   width: 100%;
   display: flex;
   gap: 1rem;
