--- a/front-end/src/components/style/Navbar.css
+++ b/front-end/src/components/style/Navbar.css
@@ -59,3 +59,8 @@ nav ul li > *{
   font-size: 2rem;
   font-weight: 900;
 }
+nav ul li > *.active{
+  background-color: rgb(80, 123, 252);
+  color: #fff;
+  border-radius: .5rem;
+}
