--- a/front-end/src/pages/admin/style/UserManagement.css
+++ b/front-end/src/pages/admin/style/UserManagement.css
@@ -20,9 +20,12 @@
   background-color: transparent;
   cursor: pointer;
   border-bottom: 2px solid transparent;
+  color: #222;
+  border-radius: 0;
 }
 
 .tab-button.activeTab {
+  color: #222;
   border-bottom: 2px solid royalblue;
 }
 
