--- a/front-end/src/pages/style/Placement.css
+++ b/front-end/src/pages/style/Placement.css
@@ -84,3 +84,19 @@
   height: 10vh;
   overflow-y: auto;
 }
+dialog {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  width: 400px;
+  max-width: 90%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+dialog::backdrop {
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(1rem);
+}
