--- a/front-end/src/components/style/Navbar.css
+++ b/front-end/src/components/style/Navbar.css
@@ -1,6 +1,7 @@
 nav{
   height: 100%;
   width: 20vw;
+  min-width: 16rem;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -19,7 +20,7 @@ nav ul {
 }
 nav ul li{
   padding: .5rem 1rem;
-  height: 100%;
+  height: 2rem;
   width: 100%;
   border-radius: .5rem;
   list-style: none;
@@ -62,5 +63,6 @@ nav ul li > *{
 nav ul li > *.active{
   background-color: rgb(80, 123, 252);
   color: #fff;
+  height: 2rem;
   border-radius: .5rem;
 }
