--- a/front-end/src/pages/style/Batches.css
+++ b/front-end/src/pages/style/Batches.css
@@ -69,3 +69,19 @@
   background-color: red;
   color: #fff;
 }
+
+.user-list{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 1rem;
+}
+
+.user-list li{
+  width: 100%;
+  list-style: none;
+  background-color: #9e9e9e22;
+  border-radius: 1rem;
+  border-radius: 8px;
+  padding: 1rem;
+}
