nav style changed for student and alumini

--- a/front-end/src/pages/admin/style/PlacementInfo.css
+++ b/front-end/src/pages/admin/style/PlacementInfo.css
@@ -55,9 +55,9 @@ button:disabled {
   cursor: not-allowed;
 }
 
-button:hover:not(:disabled) {
+/* button:hover:not(:disabled) {
   background-color: #0056b3;
-}
+} */
 
 .error {
   color: red;
