--- a/front-end/src/components/style/Navbar.css
+++ b/front-end/src/components/style/Navbar.css
@@ -1,4 +1,4 @@
-nav{
+.common-nav{
   height: 100%;
   width: 20vw;
   min-width: 16rem;
@@ -6,63 +6,96 @@ nav{
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background-color: #fff;
-  border-radius: 1rem;
-  box-shadow: 0 0 1rem #9e9e9e55;
 }
-nav ul {
+.common-nav-list{
+  gap: 4px;
   height: 60%;
-  width: 80%;
+  width: 90%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   align-items: center;
 }
-nav ul li{
-  padding: .5rem 1rem;
-  height: 2rem;
+.common-nav-list-items{
   width: 100%;
-  border-radius: .5rem;
+  border-radius: 8px;
   list-style: none;
-  transition: .5s all ease;
-  border: 1px solid transparent;
+  display: flex;
 }
-nav ul li:hover{
-  transition: .1s all ease;
-  border: 1px solid royalblue;
-  background-color: rgba(65, 105, 225, 0.1);
+.common-nav-logo{
+  font-size: 2rem;
+  font-weight: 900;
 }
-nav ul li > *{
-  height: 100%;
+.active, .common-nav-link{
+  color: #22222255;
+  border-radius: 8px;
+  height: 2.5rem;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  color: #222;
+  transition: .5s all ease;
 }
-.logout{
-  height: 2.3rem;
+.active{
+  background-color: #ebebeb;
+  color: #000;
+}
+.active svg{
+  fill: #00000094;
+}
+.common-nav-link:hover{
+  background-color: #ebebeba2;
+}
+.common-nav-list-items p{
+  flex: 2;
+}
+.common-nav-list-items svg{
+  flex: 1;
+}
+.common-profile-and-logout{
+  display: flex;
   width: 50%;
-  background-color: rgba(255, 0, 0, 0.829);
-  font-size: 1rem;
-  color: #fff;
-  padding: .5rem 1rem;
-  border: none;
-  border-radius: 8px;
-  transition: .5s all ease-in-out;
+  height: 3em;
+  justify-content: center;
+  align-items: center;
+  background-color: #ebebeb;
+  border-radius: 4rem;
+  overflow: hidden
 }
-.logout:hover{
-  box-shadow: 0 0 .5rem rgba(255, 0, 0, 0.8);
-  transition: .2s all ease-in-out;
+.common-logout{
+  height: 100%;
+  background-color: transparent;
+  padding: 0;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0;
+  transition: .5s all ease;
 }
-.nav-logo{
-  font-size: 2rem;
-  font-weight: 900;
+.common-logout svg{
+  fill: #00000055;
 }
-nav ul li > *.active{
-  background-color: rgb(80, 123, 252);
-  color: #fff;
-  height: 2rem;
-  border-radius: .5rem;
+.common-profile-link{
+  height: 100%;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: .5s all ease;
+}
+.common-profile-link svg{
+  fill: #00000055;
+}
+.common-profile-link:hover{
+  background-color: #fff;
+}
+.common-profile-link:hover svg{
+  fill: royalblue;
+}
+.common-logout:hover{
+  background-color: #fff;
+}
+.common-logout:hover svg{
+  fill: red;
 }
