--- a/front-end/src/pages/admin/style/AdminHome.css
+++ b/front-end/src/pages/admin/style/AdminHome.css
@@ -1,4 +1,4 @@
-.home-body{
+/* .home-body{
   height: 100vh;
   width: 100vw;
   background-color: #edf6f9;
@@ -18,4 +18,4 @@
   background-color: #fff;
   overflow: auto;
   box-shadow: 0 0 1rem #9e9e9e55;
-}
+} */
