--- a/front-end/src/pages/admin/style/AdminNav.css
+++ b/front-end/src/pages/admin/style/AdminNav.css
@@ -1,4 +1,4 @@
-nav{
+/* nav{
   height: 100%;
   width: 20vw;
   display: flex;
@@ -58,4 +58,4 @@ nav ul li > *{
 .nav-logo{
   font-size: 2rem;
   font-weight: 900;
-}
+} */
