--- a/front-end/src/pages/style/Batches.css
+++ b/front-end/src/pages/style/Batches.css
@@ -23,9 +23,9 @@
   width: 100%;
   font-size: 2rem;
   border-radius: 1rem;
-  border: 2px dashed #9e9e9e55;
+  border: 2px dashed #ebebeb;
   outline: none;
-  background-color: #9e9e9e22;
+  background-color: #ebebeb55;
   cursor: pointer;
   transition: .4s all ease-in-out;
   backdrop-filter: blur(1rem);
@@ -33,7 +33,7 @@
 }
 #batches li button:hover{
   color: #222;
-  box-shadow: 0 0 1rem #9e9e9e55;
+  box-shadow: 0 0 .5rem #ebebeb;
   transition: .1s all ease-in-out;
 }
 .dialog-overlay{
@@ -52,13 +52,13 @@
   max-height: fit-content;
   height: 30vh;
   width: 40vw;
-  background-color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 1rem;
   border-radius: 8px;
+  gap: 1rem;
+  padding: 0px;
 }
 .dialog-box button{
   width: 20%;
@@ -80,8 +80,14 @@
 .user-list li{
   width: 100%;
   list-style: none;
-  background-color: #9e9e9e22;
+  background-color: #fff;
   border-radius: 1rem;
   border-radius: 8px;
   padding: 1rem;
+  border: 1px solid #ebebeb;
+}
+
+.batch-selected-year{
+  height: 3rem;
+  width: 100%;
 }
