--- a/front-end/src/pages/style/Home.css
+++ b/front-end/src/pages/style/Home.css
@@ -1,10 +1,8 @@
 .home-body{
   height: 100vh;
   width: 100vw;
-  background-color: #edf6f9;
-  padding: 1rem;
+  background-color: #f8f6f7;
   display: flex;
-  gap: 1rem;
   position: relative;
 }
 .navbar{
@@ -14,8 +12,7 @@
   padding: 1rem;
   flex: 1;
   width: 50vw;
-  border-radius: 1rem;
+  height: 100%;
   background-color: #fff;
   overflow: auto;
-  box-shadow: 0 0 1rem #9e9e9e55;
 }
