--- a/front-end/src/pages/style/Home.css
+++ b/front-end/src/pages/style/Home.css
@@ -1,7 +1,8 @@
 .home-body{
   height: 100vh;
   width: 100vw;
-  background-color: #f8f6f7;
+  /* background-color: #f5f7f9; */
+  background-image: linear-gradient(45deg, #A2D2FF, #FFAFCC, #CDB4DB, #BDE0FE);
   display: flex;
   position: relative;
 }
@@ -13,6 +14,5 @@
   flex: 1;
   width: 50vw;
   height: 100%;
-  background-color: #fff;
   overflow: auto;
 }
