--- a/front-end/src/pages/style/Profile.css
+++ b/front-end/src/pages/style/Profile.css
@@ -7,6 +7,7 @@
   border: 1px solid #9e9e9e55;
   padding: 1rem;
   gap: 1rem;
+  height: fit-content;
 }
 .education b{
   padding: 0 1rem;
@@ -15,8 +16,13 @@
   border-radius: 1rem;
 }
 .profile-container{
+  padding: 1rem;
   display: flex;
   justify-content: center;
+  background: #fff;
+  height: 100%;
+  width: 100%;
+  border-radius: 1rem;
 }
 .bio{
   text-align: justify;
