--- a/front-end/src/pages/style/Batches.css
+++ b/front-end/src/pages/style/Batches.css
@@ -63,7 +63,7 @@
   flex-direction: column;
   border-radius: 8px;
   gap: 1rem;
-  padding: 0px;
+  padding: 1rem;
 }
 .dialog-box button{
   width: 20%;
@@ -73,6 +73,17 @@
   height: 2.5rem;
   background-color: red;
   color: #fff;
+}
+
+.dialog-header{
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  border: 1px dashed #9e9e9e;
+  border-radius: 1rem;
+  padding: 1rem;
+  position: sticky;
+  top: 0;
 }
 
 .user-list{
@@ -95,4 +106,30 @@
 .batch-selected-year{
   height: 3rem;
   width: 100%;
+}
+.search-controls {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.filter-select {
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+.result-count {
+  margin: 10px 0;
+  font-style: italic;
+  color: #666;
+}
+
+.user-item a {
+  color: #0066cc;
+  text-decoration: none;
+}
+
+.user-item a:hover {
+  text-decoration: underline;
 }
