--- a/front-end/src/pages/style/Placement.css
+++ b/front-end/src/pages/style/Placement.css
@@ -1,5 +1,9 @@
 .placement-container {
-  padding: 2rem;
+  padding: 1rem;
+  height: 100%;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 1rem;
 }
 
 .ats-section {
