--- a/front-end/src/pages/style/DefaultHome.css
+++ b/front-end/src/pages/style/DefaultHome.css
@@ -7,7 +7,12 @@
   border: 1px solid #9e9e9e55;
   padding: 1rem;
   gap: 1rem;
-  height: fit-content;
+  min-height: 15rem;
+  max-height: fit-content;
+  transition: .5s all ease-in-out;
+}
+.profile-card:hover{
+  background-color: #9e9e9e22;
 }
 .education b{
   padding: 0 1rem;
@@ -18,12 +23,13 @@
 .profile-container{
   padding: 1rem;
   display: flex;
-  align-items: center;
-  justify-content: start;
+  flex-direction: column;
+  justify-content: center;
   background: #fff;
   height: 100%;
   width: 100%;
   border-radius: 1rem;
+  gap: 1rem;
 }
 .bio{
   text-align: justify;
