--- a/front-end/src/pages/style/Mentor.css
+++ b/front-end/src/pages/style/Mentor.css
@@ -46,7 +46,7 @@
 .mentorship-card{
   padding: 1rem;
   border-radius: 1rem;
-  height: 10rem;
+  height: fit-content;
   width: 15rem;
   border: 1px solid #9e9e9e55;
   display: flex;
@@ -70,6 +70,7 @@
   scale: 1.2;
 }
 .follow-btn{
+  margin: 4px 0 0 0 ;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -118,4 +119,7 @@
 }
 .mentor-dialog-box p{
   padding: 1rem 0;
+}
+.nameHolder > *{
+  padding: 4px 0;
 }
