--- a/front-end/src/pages/style/Projects.css
+++ b/front-end/src/pages/style/Projects.css
@@ -48,16 +48,16 @@
 
 .project-card {
   background: white;
-  min-height: 10rem;
-  max-height: fit-content;
+  height: fit-content;
   border-radius: 10px;
   padding: 1rem;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  border: 1px solid #9e9e9e;
+  overflow: hidden;
 }
 
 .project-card h3 {
