--- a/front-end/src/pages/style/Mentor.css
+++ b/front-end/src/pages/style/Mentor.css
@@ -114,7 +114,9 @@
     background-color: #fff;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1rem;
+    overflow: auto;
 }
 .mentor-dialog-box h2 {
     font-size: 2rem;
@@ -146,48 +148,44 @@
 
 .post-card {
     aspect-ratio: 2/1;
-    width: 25em;
-    min-height: 20rem;
+    width: 90%;
+    min-height: 40rem;
     max-height: fit-content;
-    border: 1px solid #9e9e9e;
+    border: 1px solid #9e9e9e55;
     border-radius: 1rem;
+    padding: 0.5rem;
     position: relative;
-    overflow: hidden;
 }
 
 .post-card img {
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
+    background-image: radial-gradient(royalblue, #fff);
+    object-fit: contain;
+    height: 50%;
     width: 100%;
+    border-radius: 0.5rem;
 }
 .post-content {
     width: 100%;
     z-index: 100;
-    color: #fff;
-    /* filter: grayscale(); */
+    color: #222;
     backdrop-filter: blur(8px);
-    position: absolute;
-    left: 0;
-    top: 0;
     padding: 1rem;
     height: 100%;
     overflow: auto;
 }
+.post-content p {
+    text-align: justify;
+}
 .post-actions {
-    z-index: 100;
     position: absolute;
-    bottom: 0;
-    right: 0;
+    top: -1rem;
+    right: -2rem;
     height: 2.5rem;
     width: fit-content;
-    backdrop-filter: blur(1rem);
-    border: 1px dashed #fff;
+    background: royalblue;
+    border: 1px #9e9e9e55 solid;
     overflow: hidden;
-    border-top-left-radius: 1.5rem;
-    border-bottom-right-radius: 1rem;
+    border-radius: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -199,6 +197,29 @@
     width: 100%;
 }
 .post-actions button:hover {
-    background: #9e9e9e66;
-    rotate: 5deg;
+    background: darkblue;
+}
+.form-actions {
+    width: 100%;
+    display: flex;
+    gap: 8px;
+}
+.form-actions > * {
+    flex: 1;
+}
+.post-form {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.form-inputs {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.form-inputs > input,
+textarea {
+    width: 100%;
 }
