--- a/front-end/src/pages/style/Batches.css
+++ b/front-end/src/pages/style/Batches.css
@@ -1,10 +1,10 @@
-.batches-body{
+.batches-body {
   height: 100%;
   width: 100%;
   background: #fff;
   border-radius: 1rem;
 }
-#batches{
+#batches {
   height: 100%;
   width: 100%;
   display: flex;
@@ -14,12 +14,12 @@
   align-content: center;
   gap: 1rem;
 }
-#batches li{
+#batches li {
   list-style: none;
   height: 25vh;
   width: 20vw;
 }
-#batches li button{
+#batches li button {
   height: 100%;
   width: 100%;
   font-size: 2rem;
@@ -28,19 +28,19 @@
   outline: none;
   background-color: #ebebeb55;
   cursor: pointer;
-  transition: .4s all ease-in-out;
+  transition: 0.4s all ease-in-out;
   backdrop-filter: blur(1rem);
   color: #d8d8d8;
 }
-#batches li button:hover{
+#batches li button:hover {
   color: #222;
-  box-shadow: 0 0 .5rem #ebebeb;
-  transition: .1s all ease-in-out;
+  box-shadow: 0 0 0.5rem #ebebeb;
+  transition: 0.1s all ease-in-out;
 }
-#batches li button:active{
+#batches li button:active {
   scale: 1.05;
 }
-.dialog-overlay{
+.dialog-overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -49,13 +49,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  backdrop-filter: blur(.5rem);
+  backdrop-filter: blur(0.5rem);
   background-color: #00000055;
 }
-.dialog-box{
+.batch-dialog-box {
   max-height: 90vh;
-  height: 30vh;
-  width: 40vw;
+  min-height: fit-content;
+  width: 80vw;
   overflow: auto;
   display: flex;
   justify-content: center;
@@ -65,7 +65,7 @@
   gap: 1rem;
   padding: 1rem;
 }
-.dialog-box button{
+.batch-dialog-box button {
   width: 20%;
   border: none;
   border-radius: 8px;
@@ -75,9 +75,9 @@
   color: #fff;
 }
 
-.dialog-header{
+.dialog-header {
   width: 100%;
-  height: 100%;
+  height: fit-content;
   background-color: #fff;
   border: 1px dashed #9e9e9e;
   border-radius: 1rem;
@@ -86,14 +86,14 @@
   top: 0;
 }
 
-.user-list{
+.user-list {
   display: flex;
   flex-direction: column;
   width: 100%;
   gap: 1rem;
 }
 
-.user-list li{
+.user-list li {
   width: 100%;
   list-style: none;
   background-color: #fff;
@@ -103,7 +103,7 @@
   border: 1px solid #ebebeb;
 }
 
-.batch-selected-year{
+.batch-selected-year {
   height: 3rem;
   width: 100%;
 }
