--- a/front-end/src/pages/style/Batches.css
+++ b/front-end/src/pages/style/Batches.css
@@ -53,10 +53,9 @@
   background-color: #00000055;
 }
 .batch-dialog-box {
-  max-height: 90vh;
-  min-height: fit-content;
+  min-height: 10vh;
+  max-height: 80vh;
   width: 80vw;
-  overflow: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -77,7 +76,6 @@
 
 .dialog-header {
   width: 100%;
-  height: fit-content;
   background-color: #fff;
   border: 1px dashed #9e9e9e;
   border-radius: 1rem;
@@ -90,6 +88,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 90%;
+  overflow: auto;
   gap: 1rem;
 }
 
@@ -117,12 +117,6 @@
   padding: 8px;
   border-radius: 4px;
   border: 1px solid #ccc;
-}
-
-.result-count {
-  margin: 10px 0;
-  font-style: italic;
-  color: #666;
 }
 
 .user-item a {
