--- a/front-end/src/pages/style/Mentor.css
+++ b/front-end/src/pages/style/Mentor.css
@@ -158,7 +158,7 @@
 }
 
 .post-card img {
-  background-image: radial-gradient(royalblue, #fff);
+  background-image: radial-gradient(royalblue, transparent);
   object-fit: contain;
   height: 50%;
   width: 100%;
@@ -168,7 +168,7 @@
   width: 100%;
   color: #222;
   padding: 1rem;
-  height: 100%;
+  height: 50%;
   overflow: auto;
 }
 .post-content p {
