--- a/front-end/src/pages/auth/style/Login.css
+++ b/front-end/src/pages/auth/style/Login.css
@@ -50,6 +50,17 @@
 .login-form input[type="submit"]{
   background-color: royalblue;
   color: #fff;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.login-form input[type="submit"]:disabled {
+  background-color: #a0a0a0;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+.login-form input[type="submit"]:hover:not(:disabled) {
+  background-color: #3a5cc9;
 }
 .login-form label{
   width: 100%;
