--- a/front-end/src/pages/style/Profile.css
+++ b/front-end/src/pages/style/Profile.css
@@ -22,9 +22,11 @@
 .profile-img {
   width: 150px;
   height: 150px;
-  border-radius: 50%;
   object-fit: cover;
-  margin-bottom: 15px;
+  border-radius: 50%;
+  margin-bottom: 1rem;
+  border: 3px solid #f0f0f0;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .edit-btn {
