--- a/front-end/src/pages/auth/style/Login.css
+++ b/front-end/src/pages/auth/style/Login.css
@@ -6,7 +6,8 @@
   background-image: linear-gradient(45deg, #ffd900, #ffffff);
 }
 .login-container{
-  height: 50vh;
+  min-height: 50vh;
+  max-height: fit-content;
   max-width: 50vw;
   min-width: fit-content;
   border: 1px solid #9e9e9e55;
@@ -41,6 +42,7 @@
 .login-form input{
   height: 2.5rem;
   width: 100%;
+  min-width: 20rem;
   padding: .5rem 1rem;
   border-radius: 6px;
   border: 1px solid #9e9e9e;
@@ -68,4 +70,13 @@
 #forgot-password{
   float: right;
   margin-top: 1rem;
+}
+@media screen and (max-width: 1080px) {
+  .login-container{
+    flex-direction: column;
+    min-width: 22rem;
+  }
+  .logo{
+    border: none;
+  }
 }
