--- a/front-end/src/pages/auth/style/Register.css
+++ b/front-end/src/pages/auth/style/Register.css
@@ -14,7 +14,7 @@
   max-height: fit-content;
   min-width: fit-content;
   transition: .5s height ease-in-out;
-  width: 50vw;
+  max-width: 50vw;
   border: 1px solid #9e9e9e55;
   border-radius: .5rem;
   display: flex;
@@ -31,12 +31,14 @@
   height: 80%;
 }
 .register-form{
+  width: 100%;
   flex: 1;
-  display: grid;
-  place-content: center;
+  display: flex;
+
 }
 .register-form form{
   padding: 0 1rem;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -75,6 +77,7 @@
 }
 .register-form-portion{
   height: 100%;
+  min-width: 20rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -209,4 +212,9 @@
 }
 .cancel:hover:not(:disabled) {
   background-color: #cc0000;
+}
+@media screen and (max-width: 1080px) {
+  .register-container{
+    flex-direction: column;
+  }
 }
