--- a/front-end/src/pages/style/Mentor.css
+++ b/front-end/src/pages/style/Mentor.css
@@ -93,9 +93,9 @@
   scale: 1.1;
 }
 .add-community {
-  position: absolute;
-  bottom: 0;
-  right: 0;
+  position: fixed;
+  bottom: 4%;
+  right: 2rem;
   height: 3rem;
   border-radius: 2rem;
   background-color: rgba(161, 161, 161, 0.2);
@@ -109,6 +109,7 @@
   background-color: royalblue;
 }
 .mentor-dialog-box {
+  padding: 1rem;
   height: 95%;
   width: 80%;
   background-color: #fff;
@@ -225,5 +226,8 @@ textarea {
   .mentor-dialog-box{
     width: 100%;
     height: 80%;
+  }
+  .mentor-body{
+    flex-direction: row;
   }
 }
