--- a/front-end/src/pages/style/DefaultHome.css
+++ b/front-end/src/pages/style/DefaultHome.css
@@ -41,6 +41,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
 }
 .user-details > * {
     scale: 115%;
