--- a/front-end/src/pages/style/Mentor.css
+++ b/front-end/src/pages/style/Mentor.css
@@ -28,7 +28,6 @@
     width: 100%;
     height: 100%;
     display: flex;
-    flex-wrap: wrap;
     list-style: none;
     gap: 1rem;
     flex-direction: column;
@@ -37,6 +36,7 @@
 .mentor-content-page {
     position: relative;
     height: 90%;
+    width: 100%;
     overflow: auto;
     display: flex;
     flex-wrap: wrap;
@@ -137,19 +137,21 @@
     border-radius: 1rem;
     padding: 1rem;
 }
+
+.post-top-bar div {
+    width: 100%;
+}
+
 .post-top-bar button {
+    border: 1px solid #9e9e9e55;
     padding: 1rem;
-    height: fit-content;
+    height: 100%;
     width: fit-content;
     background: #fff;
     transition: 0.5s all ease;
-}
-.post-top-bar button > * {
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
     transition: 0.5s all ease;
-}
-.post-top-bar button :hover {
-    filter: drop-shadow(0 0 1rem royalblue);
-    fill: royalblue;
 }
 
 .post-card {
@@ -232,8 +234,5 @@ textarea {
     .mentor-dialog-box {
         width: 100%;
         height: 80%;
-    }
-    .mentor-body {
-        flex-direction: row;
     }
 }
