--- a/front-end/src/pages/auth/style/Register.css
+++ b/front-end/src/pages/auth/style/Register.css
@@ -164,8 +164,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(1rem);
   display:none;
   justify-content: center;
   align-items: center;
@@ -173,6 +171,9 @@
 
 .verification-dialog-overlay.active {
   display: flex;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(1rem);
 }
 
 .verification-dialog {
@@ -212,9 +213,6 @@
 .cancel {
   background-color: #ff4444;
   color: white;
-}
-.cancel:hover:not(:disabled) {
-  background-color: #cc0000;
 }
 @media screen and (max-width: 1080px) {
   .register-container {
